--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -32,7 +32,7 @@ jobs:
         languages: ${{ matrix.language }}
         build-mode: ${{ matrix.build-mode }}
     - name: Manually build code
-      if: matrix.build-mode == 'manual' && matrix-language == 'csharp'
+      if: matrix.build-mode == 'manual' && matrix.language == 'csharp'
       working-directory: ./src
       run: |
         dotnet build --configuration release
